syntax = "proto3";
package notrsync;

message ClientMessage {
  oneof message {
    SignatureRequest signature_request = 1;
    PatchRequest patch_request = 2;
    ShutdownRequest shutdown_request = 3;
  }
}

message SignatureRequest {
  repeated string filepaths = 1;
}

message SignatureResponse {
  repeated FileSignature signatures = 1;
}

message PatchRequest {
  repeated Delta deltas = 1;
}

message PatchResponse {
  bool ok = 1;
}

message FileSignature {
  string filepath = 1;
  bytes content = 2;
}

message Delta {
  string filepath = 1;
  bytes content = 2;
}

message ShutdownRequest {}

message ShutdownResponse {
  optional string error = 2;
}
